# rustmith

./: .gitignore  .gitmodules  Cargo.toml  README.md  build-worker.sh  correlation_worker.js  correlation_worker.wasm  deploy.sh  index.css  index.html  rhapsody.txt  rustfmt.toml  rustmith.js  rustmith.wasm  rustmith_correlation_worker.js  rustmith_correlation_worker.wasm  rustmith_frontend.js  rustmith_frontend.wasm
backend/: Cargo.toml
backend/src/: main.rs
common/: Cargo.toml
common/src/: ext.rs  lib.rs  note.rs  track.rs
correlation_worker/: Cargo.toml
correlation_worker/src/: main.rs
frontend/: Cargo.toml
frontend/src/: editor.rs  game.rs  guitar_effects.rs  main.rs  registry.rs  root.rs  search.rs  tuner.rs
frontend/src/graphics/: algebra.rs  camera.rs  objects.rs  renderer.rs  shaders.rs
frontend/src/model/: editor.rs  fps.rs  game.rs  guitar_effects.rs  root.rs  search.rs  tuner.rs
frontend/src/services/: ext.rs  search.rs  track.rs  worker.rs
frontend/src/view/: editor.rs  fps.rs  game.rs  guitar_effects.rs  root.rs  search.rs  tuner.rs
frontend/static/: index.css  index.html
links/: index.html
slides/: index.html
src/: backend_main.rs  common.rs  context.rs  correlation_worker.rs  fps.rs  game.rs  main.rs  paging.rs  registry.rs  renderer.rs  root.rs  search.rs
src/graphics/: algebra.rs  renderer.rs  shaders.rs
src/services/: audio.rs  ext.rs  render.rs  search.rs  worker.rs
static/: index.css  index.html
