[package]
name = "rustmith_backend"
version = "0.1.0"
authors = ["Eduard Knyshov <edvorg@gmail.com>"]
description = "Rocksmith clone for Web platform (Backend)"
edition = "2018"

[dependencies]
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"
rustmith_common = { path = "../common" }
rocket = "0.4.2"
rocket_contrib = "0.4.2"
uuid = { version = "0.7.1", features = ["v4"] }
redis = "0.9.1"
