[package]
name = "rustmith_frontend"
version = "0.1.0"
authors = ["Eduard Knyshov <edvorg@gmail.com>"]
description = "Rocksmith clone for Web platform (Frontend)"
edition = "2018"

[dependencies]
yew = "0.4.0"
yew_audio = { path = "../yew_audio" }
stdweb = "0.4.10"
stdweb-derive = "0.5.0"
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"
webgl-rendering-context = { git = "https://github.com/edvorg/webgl-rendering-context", rev = "778fee3" }
rustmith_common = { path = "../common" }